# tap-formbricks

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
tap_formbricks/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
